working on styling and adding api fetching

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-image: url('/public/images/icon-moon.svg');
+  background-repeat: no-repeat;
+  background-position: right 8px center;
+  padding-right: 10px; /* adjust the padding to make room for the SVG */
+}
