--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -15,6 +15,19 @@
   }
 }
 
+.link {
+  color: #a445ed;
+  text-decoration: none;
+  font-weight: 600;
+  transition: all 0.3s ease-in-out;
+  margin: 0 0.18rem;
+}
+
+.link:hover {
+  scale: 1.1;
+  transition: all 0.3s ease-in-out;
+}
+
 .select {
   -webkit-appearance: none;
   -moz-appearance: none;
