--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -86,7 +86,6 @@
 }
 
 /* Custom classes */
-
 .link {
   color: #a445ed;
   text-decoration: none;
@@ -98,6 +97,21 @@
 .link:hover {
   scale: 1.1;
   transition: all 0.3s ease-in-out;
+}
+
+.icon {
+  position: relative;
+  top: 0.1rem;
+}
+
+.vote-count {
+  position: absolute;
+  top: -2px;
+  right: -5px;
+  background: transparent;
+  border-radius: 50%;
+  padding: 2px 4px;
+  font-size: 0.7rem;
 }
 
 .select {
