add css transitions and styling to alerts

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -146,12 +146,22 @@
   padding: 0.5rem 1rem;
 }
 
-.alert {
-  opacity: 1;
-  transition: opacity 0.5s;
-}
-
-.alert-hidden {
+/* Alert states */
+.alert-enter {
   opacity: 0;
-  transition: opacity 0.5s;
+  transform: translateY(-20px);
+}
+.alert-enter-active {
+  opacity: 1;
+  transform: translateY(0);
+  transition: opacity 300ms, transform 300ms;
+}
+.alert-exit {
+  opacity: 1;
+  transform: translateY(0);
+}
+.alert-exit-active {
+  opacity: 0;
+  transform: translateY(-20px);
+  transition: opacity 300ms, transform 300ms;
 }
