login and register client/server-side validation complete

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -136,14 +136,12 @@
 .form-validation-error {
   margin: 0;
   margin-top: 0.25em;
-  color: var(--color-invalid);
+  color: red;
   font-size: 0.8rem;
 }
 
 .error-container {
-  background-color: hsla(356, 77%, 59%, 0.747);
-  border-radius: 0.25rem;
-  padding: 0.5rem 1rem;
+  border-color: red;
 }
 
 /* Alert states */
