add basic parallax component as placeholder

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -132,6 +132,20 @@
   margin: 0.5rem 0;
 }
 
+/* Parallax effect */
+.parallax-container {
+  height: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.content {
+  padding: 50px;
+  position: relative;
+}
+
 /* Error states */
 .form-validation-error {
   margin: 0;
