--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -38,6 +38,10 @@
   p {
     font-size: 1.04rem;
   }
+  h1 {
+    font-size: 2.5rem;
+    font-family: 'WorkSans', sans-serif;
+  }
 }
 
 /* Theme classes */
